--- a/templates/models.html
+++ b/templates/models.html
@@ -24,7 +24,7 @@
         <br>
         <h1>SHORT LINE MODEL</h1>
       <br>
-      <p>LENGTH LESS THAN __ KM</p>
+      <p>LENGTH LESS THAN 80 KM</p>
       <br>
       <button class="card_button" onclick="shortline()">Try It</button>
       </div>
@@ -37,7 +37,7 @@
         <br>
         <h1>MEDIUM LINE MODEL</h1>
       <br>
-      <p>LENGTH LESS THAN __ KM</p>
+      <p>LENGTH LESS THAN 250 KM</p>
       <br>
       <button class="card_button" onclick="mediumline()">Try It</button>
       </div>
@@ -50,7 +50,7 @@
         <br>
         <h1>LONG LINE MODEL</h1>
       <br>
-      <p>LENGTH LESS THAN __ KM</p>
+      <p>LENGTH MORE THAN 250 KM</p>
       <br>
       <button class="card_button" onclick="longline()">Try It</button>
       </div>
