--- a/templates/result.html
+++ b/templates/result.html
@@ -3,9 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Results</title>
-    <link rel ="stylesheet" type="text/css" href="{{ url_for('static',filename='css/style.css') }}"> 
+    <link rel ="stylesheet" type="text/css" href="{{ url_for('static',filename='css/style.css') }}">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script type="text/javascript" src="{{ url_for('static',filename='js/result.js') }}"></script>
   </head>
   <body style="background-color: #FFF4A3;">
     {% extends "root.html" %}
@@ -26,16 +25,34 @@
                 <th><div>VALUES</div></th>
             </tr>
             {% for key,value in output.items() %}
-            {% if key != 'bool' %}
+            {% if key != 'bool' or key != 'model' %}
             <tr>
                 <td><div>{{key}}</div></td>
                 <td><div>{{value}}</div></td>
             </tr>
             {% endif %}
             {% endfor %}   
+            
         </table>
-        <br>
-        <br><br>
+        <div class="plot">
+          <canvas id="cplot" width="800" height="800"></canvas>
+        </div>
+        <table  style="margin-top: 10px;">
+          <tr>
+              <th><div>PARAMETERS</div></th>
+              <th><div>VALUES</div></th>
+          </tr>
+          {% for key,value in plot.items() %}
+          {% if  key != 'radius' and key != 'r_x' and key != 'r_y' and key != 's_x' and key != 's_y'  %}
+          <tr>
+              <td><div>{{key}}</div></td>
+              <td><div>{{value}}</div></td>
+          </tr>
+          {% endif %}
+          {% endfor %}   
+          
+      </table>
+        <br><br><br>
         <form class="invisible_form" action="/result" method="POST">
           {% for key,value in output.items() %}
           <input style ="display:none" name = "{{key}}" value="{{value}}">
@@ -43,7 +60,17 @@
          <input style ="display:none" name = "bool" value="true">
           <input type="submit" value="Download" class ="button1">
         </form>
-        <div style="width: 100%;height: 200px;"></div>
+        <br>
+        <br>
+    <script type="text/javascript" src="{{ url_for('static',filename='js/result.js') }}"></script>
+    <script>
+      drawCirlce(ctx,{{plot["radius"]}},{{plot["r_x"]}},(-1)*{{plot["r_y"]}},2);
+      drawCirlce(ctx,{{plot["radius"]}},{{plot["s_x"]}},(-1)*{{plot["s_y"]}},2);
+      writeText("R",{{plot["r_x"]}},(-1)*{{plot["r_y"]}});
+      writeText("S",{{plot["s_x"]}},(-1)*{{plot["s_y"]}});
+      writeText("P (MW)",350,(-1)*-25)
+      writeText("Q (MVAR)",-75,(-1)*375)
+    </script>
     {% endblock %}
   </body>
 </html>
