--- a/templates/result_pdf.html
+++ b/templates/result_pdf.html
@@ -3,21 +3,42 @@
   <head>
     <meta charset="utf-8">
     <title>Results</title>
-    <link rel ="stylesheet" type="text/css" href="{{ url_for('static',filename='css/style.css') }}"> 
+    <link rel ="stylesheet" type="text/css" href="{{ url_for('static',filename='css/pdf.css') }}">
+    <script type="text/javascript" src="{{ url_for('static',filename='js/result.js') }}"></script> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script type="text/javascript" src="{{ url_for('static',filename='js/result.js') }}"></script>
   </head>
   <body >
     <div style="height: 20px;"></div>
+
+    <div class="result"><h1>TEAM MEMBERS</h1></div>
+        <table >
+            <tr>
+                <th><div>NAME</div></th>
+                <th><div>ROLL NUMBER</div></th>
+            </tr>
+            <tr>
+                <td><div>HARI VARSHAN</div></td>
+                <td><div>107120051</div></td>
+            </tr>
+            <tr>
+              <td><div>GANAPATHI</div></td>
+              <td><div>107120041</div></td>
+          </tr>
+          <tr>
+            <td><div>YASH</div></td>
+            <td><div>107120137</div></td>
+          </tr>
+        </table>
+        <div style="height: 200px;"></div>
+        
     <div class="result"><h1>RESULTS</h1></div>
-    <div style="height: 20px;"></div>
-        <table>
+        <table >
             <tr>
                 <th><div>PARAMETERS</div></th>
                 <th><div>VALUES</div></th>
             </tr>
             {% for key,value in output.items() %}
-            {% if key != 'bool'%}
+            {% if key != 'bool' and key != 'model'%}
             <tr>
                 <td><div>{{key}}</div></td>
                 <td><div>{{value}}</div></td>
@@ -25,6 +46,5 @@
             {% endif %}
             {% endfor %}   
         </table>
-
   </body>
 </html>
