--- a/templates/shortline.html
+++ b/templates/shortline.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script type="text/javascript" src="{{ url_for('static',filename='js/shortline.js') }}"></script>
   </head>
-  <body style="background-color: #96D4D4;">
+  <body onload="load()" style="background-color: #96D4D4;">
     
     {% extends "root.html" %}
     {% block content %}
@@ -23,41 +23,47 @@
     <div class = "form">
         <form action = "/shortline" method="POST">
             <div class="div_form">
-              <select name="sym" id="options">
-                <option value="Symmentrical">Symmentrical</option>
-                <option value="Unsymmmentrical">Unsymmmetrical</option>
+              <select name="sym">
+                <option onclick="sym()" value="Symmentrical">Symmetrical</option>
+                <option onclick="unsym()"value="Unsymmmentrical">Unsymmmetrical</option>
               </select>
             </div><br><br><br><br>
-                    <div id="sym" style="display: block;" class="text">Spacing between conductors<br></div>
-                    <input id="sym" type="text" name ="space">
-                    <div class="text" id="unsym" ><br>Spacing between conductor 1,2<br></div>
-                    <input id="unsym"  type="text" name ="space_12">
-                    <div class="text" id="unsym" ><br>Spacing between conductor 2,3<br></div>
-                    <input id="unsym" type="text" name ="space_23">
-                    <div id="unsym" class="text"><br>Spacing between conductor 3,1<br></div>
-                    <input id="unsym" type="text" name ="space_31">
-                    <div class="text"><br>No of sub-conductors<br></div>
-                    <input type="text" name ="n_sub_con">
-                    <div class="text"><br>Spacing between the sub-conductors<br> </div>
-                    <input type="text" name ="sub_space">
-                    <div class="text"><br>No of strands<br></div>
-                    <input type="text" name ="n_strand">
-                    <div class="text"><br>Strand diameter<br></div>
-                    <input type="text" name ="strand_dm">
-                    <div class="text"><br>Length of diameter (km)<br></div>
-                    <input type="text" name ="len">
-                    <div class="text"><br>Resistance / km <br></div>
-                    <input type="text" name ="R">
-                    <div class="text"><br>Power Frequency<br></div>
-                    <input type="text" name ="f">
-                    <div class="text"><br>Nominal system voltage<br></div>
-                    <input type="text" name ="V">
-                    <div class="text"><br>Receiving end load (MW)<br></div>
-                    <input type="text" name ="L">
-                    <div class="text"><br>Power factor<br></div>
-                    <input type="text" name ="pf">
-                    <input style ="display:none" name = "bool" value="false"><br><br><br>
-                    <input type="submit" value="Submit" class ="button1">
+            <div id="sym1"  class="text">Spacing between conductors (m)<br></div>
+            <div id="sym2"><input   type="text" name ="space"></div>
+
+            <div class="text"  id="unsym1">Spacing between conductor R,Y (m)<br></div>
+            <div id="unsym2"><input type="text" name ="space_12"><br></div>
+            <div class="text" id="unsym3" ><br>Spacing between conductor Y,B (m)<br></div>
+            <div id="unsym4"><input   type="text" name ="space_23"><br></div>
+            <div id="unsym5" class="text"><br>Spacing between conductor B,R (m)<br></div>
+            <div id="unsym6"><input  type="text" name ="space_31"><br></div>
+
+            <div class="text"><br>No of sub-conductors<br></div>
+            <input type="text" name ="n_sub_con">
+            <div class="text"><br>Spacing between the sub-conductors (cm)<br> </div>
+            <input type="text" name ="sub_space">
+            <div class="text"><br>No of strands<br></div>
+            <input type="text" name ="n_strand">
+            <div class="text"><br>Strand diameter (mm)<br></div>
+            <input type="text" name ="strand_dm">
+            <div class="text"><br>Length of line (km)<br></div>
+            <input type="text" name ="len">
+            <div class="text"><br>Resistance per km <br></div>
+            <input type="text" name ="R">
+            <div class="text"><br>Power Frequency (Hz)<br></div>
+            <input type="text" name ="f">
+            <div class="text"><br>Nominal system voltage (kV)<br></div>
+            <input type="text" name ="V">
+            <div class="text"><br>Receiving end load (MW)<br></div>
+            <input type="text" name ="L">
+            <div class="text"><br>Power factor<br></div>
+            <input type="text" name ="pf">
+            <input style ="display:none" name = "bool" value="false">
+            <input style ="display:none" name = "model" value="short"><br><br><br>
+          {% for error in errors %}
+          <div class="error_msg">PROVIDE VALID INPUT</div>
+          {% endfor %}   
+            <input type="submit" value="Submit" class ="button1">
         </form>
     </div>
      
